--- a/lib/docs/src/scss/app.scss
+++ b/lib/docs/src/scss/app.scss
@@ -11,3 +11,5 @@
 @import "navbar/navbar";
 @import "navbar/colors";
 @import "themes/clean";
+$fa-font-path: "fonts";
+@import "../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss"
